# DRF_project

./: .env.example  .env.example.docker  .gitignore  Dockerfile  all_data.json  auth.json  docker-compose.yaml  dockerfile  payment_data.json  pyproject.toml  report.html  users_data.json
config/: settings.py  urls.py
materials/: admin.py  apps.py  models.py  paginators.py  serilazers.py  serviсes.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_remove_course_slug_remove_lesson_slug.py  0003_alter_lesson_name_course.py  0004_course_owner_lesson_owner.py  0005_alter_lesson_link_video.py  0006_alter_lesson_link_video.py  0007_subscription.py  0008_alter_subscription_options.py  0009_course_amount.py  0010_alter_course_amount.py  0011_alter_course_amount.py  0012_lesson_amount.py  0013_alter_course_amount_alter_lesson_amount.py  0014_remove_course_amount_remove_lesson_amount_and_more.py  0015_course_updated_course.py
users/: admin.py  apps.py  models.py  permissions.py  serilazers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: materials.json  users.json
users/migrations/: 0001_initial.py  0002_alter_payment_paid_lesson.py  0003_payment_payment_link_payment_session_id_and_more.py  0004_alter_payment_payment_method.py  0005_alter_payment_payment_method.py  0006_alter_payment_payment_method.py  0007_alter_payment_summ_payment.py  0008_alter_payment_summ_payment.py  0009_alter_payment_payment_method.py  0010_alter_payment_payment_method.py  0011_alter_payment_summ_payment.py  (+1 more)
(+1 files in other folders)
