[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["evgeny <eaegorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
flake8 = "^7.1.0"
django-filter = "^24.2"
black = "^24.4.2"
django-crontab = "^0.7.1"
djangorestframework-simplejwt = "^5.3.1"
isort = "^5.13.2"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
